# Post-Mortem

./: .env.example  .gitignore  Cargo.toml  DECISIONS.md  LICENSE  README.md  bench-output.txt  benchmark-report.md
.github/workflows/: ci.yml  release.yml
benches/: hash_bench.rs  secretbox_bench.rs
docs/: architecture.md  ci-cd.md  deployment.md  repo-structure.md  upgrade-strategy.md
scripts/: build-release.ps1  demo.ps1  deploy-local.ps1  deploy-testnet.ps1  release-notes.ps1  upgrade-strategy.ps1
src/: init.rs  lib.rs  version.rs
tests/: differential.rs
